--- a/FileInfo/FileInfo.vcxproj.filters
+++ b/FileInfo/FileInfo.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="FileInfo.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="FileInfo.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
